--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             top: 310px;
             left: 155px;
             color: rgb(184, 184, 184);
+            font-size: 18px;
          }
       }
    </style>
