--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
 
          .time {
             position: absolute;
+            width: 100%;
             top: 308px;
-            left: 150px;
             color: rgb(184, 184, 184);
             font-size: 18px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
          }
       }
    </style>
