--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    </style>
 
    <div class="container">
-      <img src="https://i.ibb.co/zZvP8qM/Alex-no-date.jpg" alt="">
+      <img src="https://i.ibb.co/sQxc0YV/health-new-Alex.jpg" alt="health-new-Alex" border="0">
       <div class="time">
          <span id="clock"></span>
       </div>
