--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       * {
          padding: 0;
          margin: 0;
+         width: 100vw;
          box-sizing: border-box;
       }
 
@@ -47,7 +48,7 @@
             bottom: 28px;
             left: 46px;
             color: #7c7c7c;
-            font-size: 14px;
+            font-size: 16px;
          }
       }
    </style>
