--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
       * {
          padding: 0;
          margin: 0;
+         width: 1284px;
          box-sizing: border-box;
       }
 
       @media (max-width: 1285px) {
          .container {
             position: relative;
-            width:100%;
+            width: 1284px;
          }
 
          img {
