--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
       * {
          padding: 0;
          margin: 0;
-         width: 1234px;
+         overflow-x: none;
          box-sizing: border-box;
       }
 
       @media (max-width: 1285px) {
          .container {
             position: relative;
-            width: 1234px;
          }
 
          img {
@@ -34,10 +33,10 @@
 
          .time {
             position: absolute;
-            width: 1234px;
+            width: 100%;
             top: 294px;
             color: #000;
-            font-size: 112px;
+            font-size: 32px;
             font-weight: 900;
             display: flex;
             flex-direction: column;
@@ -46,10 +45,10 @@
           .test-date {
             position: absolute;
             width: 100%;
-            bottom: 42px;
-            left: 64px;
+            bottom: 26px;
+            left: 46px;
             color: #7c7c7c;
-            font-size: 64px;
+            font-size: 16px;
          }
       }
    </style>
