--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
          img {
             position: relative;
-            width: 100vw;
+            width: 100%;
             height: 100%;
          }
 
