--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       function clock() {
          let date = new Date(),
             month = date.getMonth() + 1,
-            day = date.getDate(),
+            day = date.getDate() - 1,
             hours = (date.getHours() < 10) ? '0' + date.getHours() : date.getHours(),
             minutes = (date.getMinutes() < 10) ? '0' + date.getMinutes() : date.getMinutes(),
             seconds = (date.getSeconds() < 10) ? '0' + date.getSeconds() : date.getSeconds();
