--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       * {
          padding: 0;
          margin: 0;
-         overflow-x: none;
          box-sizing: border-box;
       }
 
       @media (max-width: 1285px) {
          .container {
             position: relative;
+            overflow-x: hidden;
          }
 
          img {
